<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="@dimen/main_activity_wrapper_padding">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_1_1_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_1_1_challenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_1_1_challenge_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_1_2_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_1_2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_1_2b_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_1_3_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_1_4_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_2_1_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_2_1_challenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_2_1_challenge_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_2_2_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_2_2_challenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_2_2_challenge_button_string_value" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_2_3_button_string_value" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>