<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_task_13_horizontal_padding"
    android:paddingTop="@dimen/activity_task_13_vertical_padding"
    android:paddingRight="@dimen/activity_task_13_horizontal_padding"
    android:paddingBottom="@dimen/activity_task_13_vertical_padding"
    tools:context=".lesson_1.ActivityTask13">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:padding="@dimen/activity_task_13_padding_regular"
        android:text="@string/article_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/article_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/article_subheading"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_task_13_padding_regular"
                    android:text="@string/article_subtitle"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

                <TextView
                    android:id="@+id/article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="@dimen/activity_task_13_line_spacing"
                    android:padding="@dimen/activity_task_13_padding_regular"
                    android:text="@string/article_text" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/article_wrapper" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>